[package]
name = "protoc-rs"
version = "0.5.0"
edition = "2021"

authors = ["ThinkParQ GmbH"]
homepage = "https://github.com/thinkparq/protoc-rs"
description = "Protobuf Rust compiler, based on tonic-build"
readme = "README.md"
publish = false

[dependencies]
tonic-build = "0.13"
clap = { version = "4", features = ["derive"]}
cargo_metadata = "0.19"

[build-dependencies]
cargo_metadata = "0.19"
